--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,10 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-$background: white;
-$text-color: black;
-
-$background-dark: black;
-$text-color-dark: white;
+@import 'variables';
 
 * {
   box-sizing: border-box;
@@ -52,18 +46,18 @@ a {
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    color: $text-color-dark;
-    background-color: $background-dark;
-  }
-  .toggle-button {
-    background-color: rgb(32, 31, 31);
-    color: white;
-    &:hover {
-      color: rgb(32, 31, 31);
-      background-color: white;
-    }
-  }
+// @media (prefers-color-scheme: dark) {
+//   body {
+//     color: $text-color-dark;
+//     background-color: $background-dark;
+//   }
+//   .toggle-button {
+//     background-color: rgb(32, 31, 31);
+//     color: white;
+//     &:hover {
+//       color: rgb(32, 31, 31);
+//       background-color: white;
+//     }
+//   }
 
-}
+// }
