--- a/src/styles/Product.module.scss
+++ b/src/styles/Product.module.scss
@@ -5,3 +5,10 @@
   margin: auto;
   padding: 0 20px;
 }
+
+.container button {
+  background: $primary;
+  border: none;
+  padding: 10px;
+  margin-top: 10px;
+}
