--- a/src/styles/Cart.module.scss
+++ b/src/styles/Cart.module.scss
@@ -6,20 +6,117 @@
   padding: 0 20px;
 }
 
-.container h2 {
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin-bottom: 20px;
+}
+
+.header button {
+  background: none;
+  border: none;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 16px;
+  color: $primary;
+  cursor: pointer;
 }
 
 .grid {
   display: grid;
   grid-template-columns: repeat(2, minmax(50%, auto));
   max-width: 100%;
-  gap: 20px;
+  gap: 40px;
 }
 
 .card {
-  padding: 15px;
+  padding: 20px;
   border-radius: 8px;
   background: rgba(#3a3a3a, 0.1);
   margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.card p {
+  margin-top: 10px;
+}
+
+.cardButtons, 
+.cardButtons div {
+  display: flex;
+  gap: 15px;
+}
+
+.cardButtons {
+  gap: 25px;
+}
+
+.cardButtons div {
+  padding: 10px 20px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.cardButtons div button {
+  border: none;
+  background: white;
+  height: 30px;
+  width: 30px;
+  border-radius: 100%;
+  color: $primary;
+  font-size: 20px;
+  cursor: pointer;
+  &:hover {
+    background:$primary;
+    color: white;
+  }
+}
+
+.card div button[disabled] {
+  background-color: rgb(216, 213, 213);
+  color: rgb(179, 179, 179);
+  cursor: default;
+}
+
+.cardButtonDelete {
+  background: none !important;
+  border: none;
+  color: red;
+}
+
+.main div {
+  margin-top: 20px;
+  border-radius: 10px;
+}
+
+.main button {
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 10px;
+  font-size: 16px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+/* Mobile */
+@media (max-width: 700px) {
+  .grid {
+    grid-template-columns: 1fr;
+    margin-bottom: 120px;
+    max-width: 320px;
+    text-align: center;
+  }
+  
+  .grid h2 {
+    font-size: 15px;
+  }
+
+  .card h2 {
+    margin-bottom: 0.5rem;
+  }
 }
